Synchronized with feature-services, updated scripts and dependencies